testData/annotation/IDEA_ResolveImportWithoutType.hx
<error descr="Can't find class">import haxe.macro.Tools;</error>